[package]
name = "ule"
version = "0.1.0"
edition = "2021"
publish = true
authors = [
    "Distemi <distemi.bot@mail.ru>"
]
homepage = "https://github.com/Distemi/ULE"
repository = "https://github.com/Distemi/ULE"
readme = "README.md"

[dependencies]
# Fast HashMap and etc.
ahash = "0.7.6"
# Global variables
lazy_static = "1.4.0"
# Struct <-> JSON and so on
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
# Logging utils
log = "0.4.14"
fern = { version = "0.6", features = ["colored"] }
# Time
chrono = "0.4.19"
# Async
async-std = "1.10.0"

# Single threaded TCP and UDP server
[dependencies.mio]
version = "0.8.0"
default-features = false
features = [
    "os-ext",
    "net"
]


[profile.release]
opt-level = "z"
